Criando conteúdo para o html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,44 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="bg">
+    </div>
     <h1>Aprender CSS</h1>
+    <h2>Subtítulo qualquer</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Non odio consequatur sit perferendis ab molestias corrupti quos nihil! 
+        Ratione labore harum laborum! 
+        Consequuntur magni odit dolorum sequi pariatur sapiente deleniti repudiandae assumenda tempore, dolor ab, suscipit eligendi totam ex. 
+        Incidunt, numquam? Facere sunt aliquam harum mollitia ad! 
+        Iusto corrupti quae asperiores, optio inventore earum iure veniam voluptas tenetur, nisi quasi amet! 
+        Quae, reiciendis quos. 
+        Et laborum suscipit iste quas placeat ab accusantium dolorem, optio facilis pariatur ratione ea sint rerum sequi velit, 
+        odit eveniet delectus repellat perspiciatis, voluptatem soluta beatae eos. 
+        Suscipit, cupiditate! Accusantium accusamus quia praesentium tempora aspernatur, 
+        ad neque enim velit sunt iusto labore voluptates mollitia eos voluptate suscipit a cumque odit vel culpa perferendis quis, 
+        voluptatum pariatur dolorem. Cupiditate eveniet ea veritatis. 
+        Minima quidem nemo sapiente ipsam nesciunt earum iusto dolore quos cupiditate quibusdam, 
+        quo unde suscipit iure delectus facere veritatis nisi non quae praesentium! 
+        Rerum asperiores corrupti reiciendis delectus quae! 
+        Fuga perferendis necessitatibus accusantium deleniti, 
+        fugiat praesentium aperiam ipsum ratione ipsam repudiandae ab, 
+        ducimus unde harum? Explicabo minima, autem, quis numquam ducimus impedit, 
+        ipsam nostrum fugit sunt quam veritatis est obcaecati ullam maiores tempore esse! 
+        Consequatur necessitatibus repellat natus? 
+        Possimus delectus laborum tempora assumenda reiciendis error vitae id provident voluptate deserunt 
+        ea esse dignissimos repudiandae explicabo tenetur, qui asperiores! 
+        Voluptas voluptatem soluta tenetur pariatur enim molestiae eligendi iste officiis, 
+        quos quam error quas sunt, sit sapiente ipsam vel at. 
+        Alias, esse? Reprehenderit voluptates sit ex aliquam, aliquid mollitia error blanditiis suscipit odit reiciendis, 
+        ratione magnam iusto molestiae, vitae deleniti perferendis sapiente recusandae earum quo incidunt nisi modi sunt hic dolorem? 
+        Consequatur id eum eaque, rerum quos distinctio voluptas tempore sed eligendi quam veniam facere dolorum maiores 
+        ratione fugiat doloremque vitae nesciunt odit quaerat exercitationem, labore ex totam. Hic iusto repellendus temporibus at, 
+        dolor optio obcaecati, accusamus, nostrum sit molestiae exercitationem porro totam eveniet ratione laborum illum provident cum 
+        fuga praesentium fugiat a nisi reprehenderit harum molestias. Provident at nemo dicta, unde ipsam repellat neque iure praesentium 
+        esse culpa ea quia minus itaque sapiente quae maxime quas voluptate qui nesciunt deleniti debitis optio! 
+        Quos itaque soluta eius sed voluptates, iste repellendus est consequatur, 
+        cumque sit repudiandae beatae culpa quibusdam numquam impedit rerum qui ratione deleniti esse odio nemo eligendi nesciunt dicta. 
+        Sapiente qui reiciendis deserunt nemo quis minima, officiis repudiandae explicabo laboriosam fugiat deleniti possimus corporis id 
+        tenetur exercitationem ullam eligendi cum provident odit ipsum, optio voluptas?</p>
 </body>
 </html>
