Criando o hiperlink para a nova página

--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
         cumque sit repudiandae beatae culpa quibusdam numquam impedit rerum qui ratione deleniti esse odio nemo eligendi nesciunt dicta. 
         Sapiente qui reiciendis deserunt nemo quis minima, officiis repudiandae explicabo laboriosam fugiat deleniti possimus corporis id 
         tenetur exercitationem ullam eligendi cum provident odit ipsum, optio voluptas?</p>
+    <p><a href="./time.html" target="_blank" rel="noopener noreferrer">Conheça o time</a></p>
 </body>
 </html>
